[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background/OptionsMenu.png" type="Texture" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/borderButtons/back button.png" type="Texture" id=3]
[ext_resource path="res://assets/borderButtons/buttonSound.png" type="Texture" id=4]
[ext_resource path="res://assets/borderButtons/buttonMusic.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/wood-hard-hit.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/borderButtons/mainMenuButton.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 258.0
margin_bottom = 124.0
rect_scale = Vector2( 0.79854, 0.8303 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[node name="Sprite" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 638.0
margin_bottom = 356.0
rect_scale = Vector2( 0.67, 0.67 )
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_editor_description_": "
"
}

[node name="TextureRect" type="TextureRect" parent="Sprite"]
margin_left = 299.0
margin_top = 129.0
margin_right = 1680.0
margin_bottom = 932.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Sprite"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="BackButton" type="TextureButton" parent="Sprite/CenterContainer"]
margin_right = 528.0
margin_bottom = 531.0
texture_normal = ExtResource( 3 )

[node name="MainMenu" type="TextureButton" parent="."]
margin_left = 475.868
margin_top = 419.126
margin_right = 905.868
margin_bottom = 509.126
rect_scale = Vector2( 1.1, 1.1 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 8 )
expand = true

[node name="Music" type="TextureButton" parent="."]
margin_left = 336.0
margin_top = 312.0
margin_right = 423.0
margin_bottom = 395.0
texture_normal = ExtResource( 5 )

[node name="Effects" type="TextureButton" parent="."]
margin_left = 312.0
margin_top = 414.0
margin_right = 444.0
margin_bottom = 526.0
texture_normal = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Sprite/CenterContainer/BackButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Effects" to="." method="_on_Effects_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
